# BlockGame

./: .gitignore  .gitmodules  CMakeLists.txt  definition.cpp  map.txt  map2x2.txt  map4x4.txt  texture_amounts.txt  texture_names.txt  texture_real_index.txt
src/: camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  context.cpp  context.hpp  main.cpp  math.cpp  math.hpp  metal_stuff.cpp  namespaces.hpp  renderer.cpp  renderer.hpp  shaders.metal  textureNames.py  window.cpp  window.hpp
src/backend/: glfw_adapter.h
